--- a/Exam_preparation/01. Travel Agency/index.html
+++ b/Exam_preparation/01. Travel Agency/index.html
@@ -38,7 +38,9 @@
     <div id="information">
         <label>Preview your information:</label>
         <div class="preview">
-            <ul id="infoPreview"></ul>
+            <ul id="infoPreview">
+                
+            </ul>
             <div class="actions">
                 <input type="button" id="editBTN" value="Edit" disabled>
                 <input type="button" id="continueBTN" value="Continue" disabled>
